# active_learning_darkhiggs

./: .gitignore  README.md  clean.sh  collect_output.py  grid.csv  plotSensitivity.py  run_workflow.sh  setup_plotting.sh  submit_batch.py  write_grid.py  write_grid_hypercube.py
batch_management/: condor_handler.py
evaluate_limits/: run.sh
evaluate_limits/data/: limits_EXOT-2018-46.csv
evaluate_limits/scripts/: estimateLimit.py
evaluate_yields/: requirements.txt  run.sh  setup.sh
evaluate_yields/data/: patch_template.json
evaluate_yields/scripts/: getYields.py
generate_signal/: .gitignore  Dockerfile  run.sh  setup_derivation.sh  setup_evgen.sh
generate_signal/assets/: MadGraphControl_MadGraphPythia8_N30NLO_A14N23LO_monoSbb_CKKWL.py  MadGraphControl_MadGraphPythia8_N31LO_A14N23LO_DMSbb_CKKWL.py  mc.MGPy8EG_DMSbb_template.py
generate_signal/scripts/: extractRunInfo.py  makeJobOption.py
grids/: grid_1000_lhs.csv  grid_10_mcrequest00.csv  grid_10_mcrequest00.txt  grid_10_test.csv  grid_2401_uniform.csv  grid_2500_hypercube.csv  reco_30.csv
joboptions/: makeOfficialJobOption.py  makeOfficialJobOptionGrid.py  mc.MGPy8EG_DMSbb_template.py  run.sh
joboptions/100000/: mc.MGPy8EG_DMSbb_zp3171_dm410_dh143_gq0p25_gx1p28.py
joboptions/100001/: mc.MGPy8EG_DMSbb_zp3344_dm726_dh103_gq0p25_gx1p44.py
joboptions/100002/: mc.MGPy8EG_DMSbb_zp790_dm1129_dh120_gq0p25_gx3p41.py
joboptions/100003/: mc.MGPy8EG_DMSbb_zp3077_dm204_dh53_gq0p25_gx0p85.py
joboptions/100004/: mc.MGPy8EG_DMSbb_zp2433_dm532_dh57_gq0p25_gx1p01.py
joboptions/100005/: mc.MGPy8EG_DMSbb_zp4309_dm559_dh128_gq0p25_gx1p78.py
joboptions/100006/: mc.MGPy8EG_DMSbb_zp4092_dm939_dh83_gq0p25_gx1p83.py
joboptions/100007/: mc.MGPy8EG_DMSbb_zp2933_dm572_dh79_gq0p25_gx0p94.py
joboptions/100008/: mc.MGPy8EG_DMSbb_zp156_dm748_dh157_gq0p25_gx2p09.py
joboptions/100009/: mc.MGPy8EG_DMSbb_zp706_dm994_dh109_gq0p25_gx2p63.py
joboptions/100xxx/100000/: log.generate  mc.MGPy8EG_DMSbb_zp3171_dm410_dh143_gq0p25_gx1p28.py
joboptions/100xxx/100001/: log.generate  mc.MGPy8EG_DMSbb_zp3344_dm726_dh103_gq0p25_gx1p44.py
results/: summary_2401_uniform.csv
simple_analysis/: .asetup.save  .gitignore  install.sh  run.sh  setup.sh
simple_analysis/SimpleAnalysis/: .clang-format-ignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  README.md
simple_analysis/SimpleAnalysis/Ext_RestFrames/: README.md  externals.cmake
simple_analysis/SimpleAnalysis/Ext_RestFrames/cmt/: Makefile.RootCore  install  link.RootCore  options  precompile.RootCore  test_file.C
simple_analysis/SimpleAnalysis/SimpleAnalysisCodes/: CMakeLists.txt
simple_analysis/SimpleAnalysis/SimpleAnalysisCodes/src/: ANA-EXOT-2018-46.cxx  SmearCheck.cxx
simple_analysis/SimpleAnalysis/SimpleAnalysisFramework/: .clang-format-ignore  .gitlab-ci.yml  CMakeLists.txt  README.md
simple_analysis/SimpleAnalysis/SimpleAnalysisFramework/SimpleAnalysisFramework/: AnalysisClass.h  AnalysisEvent.h  AnalysisObject.h  AnalysisRunner.h  BDT.h  METSignificanceCalculator.h  MVA.h  NtupleMaker.h  OutputHandler.h  Reader.h  RestFramesHelper.h  Reweight.h  SlimReader.h  Smearing.h  TruthEvent.h
simple_analysis/SimpleAnalysis/SimpleAnalysisFramework/src/: AnalysisClass.cxx  AnalysisObject.cxx  AnalysisRunner.cxx  ExampleAnalysis.cxx  LinkDef.h  LocalSmearing.cxx  LocalSmearing.h  MCEventVetoHelper.cxx  MCEventVetoHelper.h  METSignificanceCalculator.cxx  MT2.h  MVA.cxx  NtupleMaker.cxx  ObjectResolutions.cxx  ObjectResolutions.h  OutputHandler.cxx  PDFReweight.cxx  PDFReweight.h  PDFVariations.cxx  PDFVariations.h  Reader.cxx  RestFramesHelper.cxx  Reweight.cxx  SlimReader.cxx  Smearing.cxx  TMctLib.cxx  TMctLib.h  TopnessTool.cxx  TopnessTool.h  TruthDecayer.cxx  TruthDecayer.h  mctlib.cxx  mctlib.h  xAODTruthReader.cxx  xAODTruthReader.h
simple_analysis/SimpleAnalysis/SimpleAnalysisFramework/src/objres/: JERData16EMTopo.h  JERMC16EMTopo.h  electronConst90.h  electronNoise90.h  electronSampling90.h  jetphi100.h  jetphi20.h  jetphi50.h  photonConst90.h  photonNoise90.h  photonSampling90.h  r0_MS_MC_BARREL.h  r0_MS_MC_ENDCAP.h  r1_ID_MC_BARREL.h  r1_ID_MC_ENDCAP.h  r1_MS_MC_BARREL.h  r1_MS_MC_ENDCAP.h  r2_ID_MC_BARREL.h  r2_ID_MC_ENDCAP.h  r2_MS_MC_BARREL.h  r2_MS_MC_ENDCAP.h  tauRes1p0nBin0.h  tauRes1p0nBin1.h  tauRes1p0nBin2.h  tauRes1p0nBin3.h  tauRes1p0nBin4.h
simple_analysis/SimpleAnalysis/SimpleAnalysisFramework/util/: execBase.h  simpleAnalysis.cxx  slimMaker.cxx
simple_analysis/SimpleAnalysis/docs/: mkdocs.yml  requirements.txt
simple_analysis/SimpleAnalysis/docs/src/: README.md
simple_analysis/SimpleAnalysis/docs/src/stylesheets/: extra.css
simple_analysis/SimpleAnalysis/docs/src/tutorial/: acceptance.md  bdt.md  crosssections.md  smearing.md  theo_uncertainties.md
simple_analysis/SimpleAnalysis/scripts/: gridSubmit.py  testRunner.sh
simple_analysis/SimpleAnalysis/src/: LPXReweight.cxx  LPXReweight.h  SUSYPicker.cxx  SUSYPicker.h  TruthSmear.cxx  TruthSmear.h  XSReweight.cxx  XSReweight.h  xAODRecoReader.cxx  xAODRecoReader.h
simple_analysis/cutflow_validation/: compare_cutflows.py  cutflow_311378_resolved.csv  cutflow_311382_merged.csv  cutflow_311382_resolved.csv  cutflow_312360_merged.csv  run.sh
(+46 files in other folders)
